# houdini-mcp

./: .mcp.json  README.md  pyproject.toml
houdini_bridge/: __init__.py  server.py  shelf_tool.py
houdini_extraction/: __init__.py  aov.py  camera.py  file_ref.py  geo.py  invalidation.py  serializers.py
houdini_mcp/: __init__.py  server.py
tests/: conftest.py  test_extraction.py  test_extraction_tools.py  test_server.py
