[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "houdini-mcp"
version = "0.1.0"
description = "MCP server for Houdini integration with Claude agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Frank" }
]
keywords = ["houdini", "mcp", "claude", "ai", "vfx", "3d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
apps = [
    # MCP Apps extension (Phase 4)
    # "modelcontextprotocol-ext-apps>=0.1.0",
]

[project.scripts]
houdini-mcp = "houdini_mcp.server:run"

[project.urls]
Homepage = "https://github.com/MoleskinProductions/houdini-mcp"
Documentation = "https://github.com/MoleskinProductions/houdini-mcp#readme"
Repository = "https://github.com/MoleskinProductions/houdini-mcp"

[tool.hatch.build.targets.wheel]
packages = ["houdini_mcp", "houdini_bridge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
